--- a/package.json
+++ b/package.json
@@ -11,20 +11,23 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/elements": "^2.2.6",
-    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.2.1",
     "expo": "~52.0.37",
     "expo-dev-client": "~5.0.12",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
+    "native-base": "^3.4.28",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-reanimated": "^3.17.1",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
